--- a/assets/scss/default/breadcrumb.scss
+++ b/assets/scss/default/breadcrumb.scss
@@ -26,6 +26,11 @@
             font-weight: 900;
           }
         }
+        
+        .active{
+          color: $first-color;
+        }
+
       }
     }
   }
