--- a/assets/scss/default/menu.scss
+++ b/assets/scss/default/menu.scss
@@ -57,6 +57,8 @@
         text-transform: capitalize;
         font-weight: bold;
         font-family: $ff-gordita;
+        font-size: small;
+        color: $white;
       }
     }
   }
