--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -8,7 +8,7 @@
 @import './default/annimations.scss';
 @import './default/variables.scss';
 @import './default/reset.scss';
-@import './default/custom';
+@import './default/custom.scss';
 @import './default/header.scss';
 @import './default/menu.scss';
 @import './default/cards.scss';
@@ -17,5 +17,7 @@
 @import './default/breadcrumb.scss';
 @import './default/tables.scss';
 @import './default/media.scss';
+@import './default/modals.scss';
+@import './default/forms.scss';
 @import './responsive/responsive.scss';
 
