--- a/assets/scss/default/tables.scss
+++ b/assets/scss/default/tables.scss
@@ -1,53 +1,31 @@
-.responsive__table{
-    li{
-        display:flex;
-        justify-content: space-between;
-    }
-
-    .table__header{
-        font-size: $fs-7;
-        color: $black;
-        font-weight: 900;
-        background:$silver;
-        padding:10px;
-    }
-    
-    .table__row{
-        padding-block: 10px;
-        font-size: $fs-7;
-        a{
-            color: $first-color;
-            font-weight: $fw-500;
-        }
-    }
-
-}
-
-.dataTables_filter {
-    display: none;
-}
-
-.table__list{
-    border: 1px solid silver;
+#responsive__table{
+    overflow-x:auto;
+    border-collapse: collapse;
     width: 100%;
-    
-    h6{
-        font-size: $fs-8;
-    }
+    font-size: $fs-8;
 
-    p{
-        color: $black;
-        font-size: $fs-7;
-        margin-block:10px;
-    }
-    th{
-        font-size: $fs-7;
-        padding: 10px;
-    }
-    td{
-        font-size: $fs-7;
-        border: 1px solid silver;
-        padding: 10px;
+    tr{
+
+       
+        &:nth-child(even){
+            background: $silver;
+        }
+
+        &:hover {background-color: #ddd;
+        cursor: pointer;}
+
+        th{
+            padding-top: 12px;
+            padding-bottom: 12px;
+            text-align: center;
+            background-color: $first-color;
+            color: $white;
+        }
+        
+        td{
+            border:1px solid $silver;
+            padding: 10px;    
+        }
     }
 
 }
