--- a/assets/scss/default/custom.scss
+++ b/assets/scss/default/custom.scss
@@ -775,10 +775,57 @@ input[type="checkbox"]{
   }
 }
 
-.custom__checkox{
+
+
+.checkbox__container{
   
-  padding: 10px;
-  border: 2px solid $first-color;
+  position:relative;
+
+  &:hover{
+    input ~ .checkmark {
+      background-color: #ccc;
+    }
+    
+  }
+
+  .custom__checkox{
+    padding: 10px;
+    opacity:0;
+  }
+  
+  input:checked ~ .checkmark {
+    background: $first-color;
+  }
+  
+  input:checked ~ .checkmark:after {
+    display: block;
+  }
+
+
+  .checkmark{
+    position: absolute;
+    top: -13px;
+    left: 2px;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #ebebeb;
+    box-shadow: 0px 0px 7px black;
+    cursor: pointer;
+
+     &:after{
+      position: absolute;
+        content:'';
+        background:$white;
+        width:10px;
+        height:10px;
+        border-radius: 50px;
+        top: 7px;
+        left: 8px;
+        display: none;
+     }
+  }
+
 }
 
 .child{
